# django-ecs

./: .env.sample  docker-compose.yml
backend-django/: Dockerfile  README.md  pyproject.toml
backend-django/django_aws/: manage.py
backend-django/django_aws/django_aws/: asgi.py  settings.py  urls.py  wsgi.py
backend-django/django_aws/django_aws/tests/: test_admin_page.py  test_auth_models_user.py
backend-django/django_aws/django_aws/todo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend-django/django_aws/django_aws/todo/migrations/: 0001_initial.py
backend-django/scripts/: entrypoint.sh  env_activate.sh
frontend-react/: Dockerfile  package-lock.json  package.json
frontend-react/src/: App.css  App.js  index.js
frontend-react/src/components/: Modal.js
infra-terraform/: autoscale.tf  backend_web_shell.sh  ecs.tf  load_balancer.tf  provider.tf  s3.tf  variables.tf
infra-terraform/templates/: backend_container.json.tpl
