[tool.poetry]
name = "backend-django"
version = "0.1.0"
description = ""
authors = ["Ken Salanio <kssalanio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
django = "^5.1.7"
django-environ = "^0.12.0"
black = "^25.1.0"
flake8 = "^7.1.2"
django-extensions = "^3.2.3"
pytest-django = "^4.10.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_aws.settings"
python_files = ["tests/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
